# sync-labels

./: config.dist.toml  pyproject.toml  readme.md  sync-labels.py
