[tool.poetry]
name = "myelin-sync-labels"
version = "0.1.0"
description = ""
authors = ["Ruben Schmidmeister <ruben@myelin.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = { git = "https://github.com/phako/PyGithub.git", branch = "master" }
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
